// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`i18nContentSchema > should extend the schema 1`] = `"{"def":{"type":"union","options":[{"def":{"type":"object","shape":{"en":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null},"fr":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null},"de":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}}},"type":"object"},{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}]},"type":"union","options":[{"def":{"type":"object","shape":{"en":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null},"fr":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null},"de":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}}},"type":"object"},{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}]}"`;

exports[`i18nContentSchema > should extend the schema 2`] = `
{
  "de": ZodString {
    "and": [Function],
    "apply": [Function],
    "array": [Function],
    "base64": [Function],
    "base64url": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "cidrv4": [Function],
    "cidrv6": [Function],
    "clone": [Function],
    "cuid": [Function],
    "cuid2": [Function],
    "date": [Function],
    "datetime": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "type": "string",
    },
    "default": [Function],
    "describe": [Function],
    "duration": [Function],
    "e164": [Function],
    "email": [Function],
    "emoji": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "endsWith": [Function],
    "exactOptional": [Function],
    "format": null,
    "guid": [Function],
    "includes": [Function],
    "ipv4": [Function],
    "ipv6": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "jwt": [Function],
    "ksuid": [Function],
    "length": [Function],
    "lowercase": [Function],
    "max": [Function],
    "maxLength": null,
    "meta": [Function],
    "min": [Function],
    "minLength": null,
    "nanoid": [Function],
    "nonempty": [Function],
    "nonoptional": [Function],
    "normalize": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "regex": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "slugify": [Function],
    "spa": [Function],
    "startsWith": [Function],
    "superRefine": [Function],
    "time": [Function],
    "toJSONSchema": [Function],
    "toLowerCase": [Function],
    "toUpperCase": [Function],
    "transform": [Function],
    "trim": [Function],
    "type": "string",
    "ulid": [Function],
    "uppercase": [Function],
    "url": [Function],
    "uuid": [Function],
    "uuidv4": [Function],
    "uuidv6": [Function],
    "uuidv7": [Function],
    "with": [Function],
    "xid": [Function],
  },
  "en": ZodString {
    "and": [Function],
    "apply": [Function],
    "array": [Function],
    "base64": [Function],
    "base64url": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "cidrv4": [Function],
    "cidrv6": [Function],
    "clone": [Function],
    "cuid": [Function],
    "cuid2": [Function],
    "date": [Function],
    "datetime": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "type": "string",
    },
    "default": [Function],
    "describe": [Function],
    "duration": [Function],
    "e164": [Function],
    "email": [Function],
    "emoji": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "endsWith": [Function],
    "exactOptional": [Function],
    "format": null,
    "guid": [Function],
    "includes": [Function],
    "ipv4": [Function],
    "ipv6": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "jwt": [Function],
    "ksuid": [Function],
    "length": [Function],
    "lowercase": [Function],
    "max": [Function],
    "maxLength": null,
    "meta": [Function],
    "min": [Function],
    "minLength": null,
    "nanoid": [Function],
    "nonempty": [Function],
    "nonoptional": [Function],
    "normalize": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "regex": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "slugify": [Function],
    "spa": [Function],
    "startsWith": [Function],
    "superRefine": [Function],
    "time": [Function],
    "toJSONSchema": [Function],
    "toLowerCase": [Function],
    "toUpperCase": [Function],
    "transform": [Function],
    "trim": [Function],
    "type": "string",
    "ulid": [Function],
    "uppercase": [Function],
    "url": [Function],
    "uuid": [Function],
    "uuidv4": [Function],
    "uuidv6": [Function],
    "uuidv7": [Function],
    "with": [Function],
    "xid": [Function],
  },
  "fr": ZodString {
    "and": [Function],
    "apply": [Function],
    "array": [Function],
    "base64": [Function],
    "base64url": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "cidrv4": [Function],
    "cidrv6": [Function],
    "clone": [Function],
    "cuid": [Function],
    "cuid2": [Function],
    "date": [Function],
    "datetime": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "type": "string",
    },
    "default": [Function],
    "describe": [Function],
    "duration": [Function],
    "e164": [Function],
    "email": [Function],
    "emoji": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "endsWith": [Function],
    "exactOptional": [Function],
    "format": null,
    "guid": [Function],
    "includes": [Function],
    "ipv4": [Function],
    "ipv6": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "jwt": [Function],
    "ksuid": [Function],
    "length": [Function],
    "lowercase": [Function],
    "max": [Function],
    "maxLength": null,
    "meta": [Function],
    "min": [Function],
    "minLength": null,
    "nanoid": [Function],
    "nonempty": [Function],
    "nonoptional": [Function],
    "normalize": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "regex": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "slugify": [Function],
    "spa": [Function],
    "startsWith": [Function],
    "superRefine": [Function],
    "time": [Function],
    "toJSONSchema": [Function],
    "toLowerCase": [Function],
    "toUpperCase": [Function],
    "transform": [Function],
    "trim": [Function],
    "type": "string",
    "ulid": [Function],
    "uppercase": [Function],
    "url": [Function],
    "uuid": [Function],
    "uuidv4": [Function],
    "uuidv6": [Function],
    "uuidv7": [Function],
    "with": [Function],
    "xid": [Function],
  },
}
`;

exports[`i18nContentSchema > should extend the schema and make partial if option is set 1`] = `"{"def":{"type":"union","options":[{"def":{"type":"object","shape":{"en":{"def":{"type":"optional","innerType":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}},"type":"optional"},"fr":{"def":{"type":"optional","innerType":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}},"type":"optional"},"de":{"def":{"type":"optional","innerType":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}},"type":"optional"}},"checks":[]},"type":"object"},{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}]},"type":"union","options":[{"def":{"type":"object","shape":{"en":{"def":{"type":"optional","innerType":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}},"type":"optional"},"fr":{"def":{"type":"optional","innerType":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}},"type":"optional"},"de":{"def":{"type":"optional","innerType":{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}},"type":"optional"}},"checks":[]},"type":"object"},{"def":{"type":"string"},"type":"string","format":null,"minLength":null,"maxLength":null}]}"`;

exports[`i18nContentSchema > should extend the schema and make partial if option is set 2`] = `
{
  "de": ZodOptional {
    "and": [Function],
    "apply": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "clone": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "innerType": ZodString {
        "and": [Function],
        "apply": [Function],
        "array": [Function],
        "base64": [Function],
        "base64url": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "cidrv4": [Function],
        "cidrv6": [Function],
        "clone": [Function],
        "cuid": [Function],
        "cuid2": [Function],
        "date": [Function],
        "datetime": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "string",
        },
        "default": [Function],
        "describe": [Function],
        "duration": [Function],
        "e164": [Function],
        "email": [Function],
        "emoji": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "endsWith": [Function],
        "exactOptional": [Function],
        "format": null,
        "guid": [Function],
        "includes": [Function],
        "ipv4": [Function],
        "ipv6": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "jwt": [Function],
        "ksuid": [Function],
        "length": [Function],
        "lowercase": [Function],
        "max": [Function],
        "maxLength": null,
        "meta": [Function],
        "min": [Function],
        "minLength": null,
        "nanoid": [Function],
        "nonempty": [Function],
        "nonoptional": [Function],
        "normalize": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "regex": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "slugify": [Function],
        "spa": [Function],
        "startsWith": [Function],
        "superRefine": [Function],
        "time": [Function],
        "toJSONSchema": [Function],
        "toLowerCase": [Function],
        "toUpperCase": [Function],
        "transform": [Function],
        "trim": [Function],
        "type": "string",
        "ulid": [Function],
        "uppercase": [Function],
        "url": [Function],
        "uuid": [Function],
        "uuidv4": [Function],
        "uuidv6": [Function],
        "uuidv7": [Function],
        "with": [Function],
        "xid": [Function],
      },
      "type": "optional",
    },
    "default": [Function],
    "describe": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "exactOptional": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "toJSONSchema": [Function],
    "transform": [Function],
    "type": "optional",
    "unwrap": [Function],
    "with": [Function],
  },
  "en": ZodOptional {
    "and": [Function],
    "apply": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "clone": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "innerType": ZodString {
        "and": [Function],
        "apply": [Function],
        "array": [Function],
        "base64": [Function],
        "base64url": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "cidrv4": [Function],
        "cidrv6": [Function],
        "clone": [Function],
        "cuid": [Function],
        "cuid2": [Function],
        "date": [Function],
        "datetime": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "string",
        },
        "default": [Function],
        "describe": [Function],
        "duration": [Function],
        "e164": [Function],
        "email": [Function],
        "emoji": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "endsWith": [Function],
        "exactOptional": [Function],
        "format": null,
        "guid": [Function],
        "includes": [Function],
        "ipv4": [Function],
        "ipv6": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "jwt": [Function],
        "ksuid": [Function],
        "length": [Function],
        "lowercase": [Function],
        "max": [Function],
        "maxLength": null,
        "meta": [Function],
        "min": [Function],
        "minLength": null,
        "nanoid": [Function],
        "nonempty": [Function],
        "nonoptional": [Function],
        "normalize": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "regex": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "slugify": [Function],
        "spa": [Function],
        "startsWith": [Function],
        "superRefine": [Function],
        "time": [Function],
        "toJSONSchema": [Function],
        "toLowerCase": [Function],
        "toUpperCase": [Function],
        "transform": [Function],
        "trim": [Function],
        "type": "string",
        "ulid": [Function],
        "uppercase": [Function],
        "url": [Function],
        "uuid": [Function],
        "uuidv4": [Function],
        "uuidv6": [Function],
        "uuidv7": [Function],
        "with": [Function],
        "xid": [Function],
      },
      "type": "optional",
    },
    "default": [Function],
    "describe": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "exactOptional": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "toJSONSchema": [Function],
    "transform": [Function],
    "type": "optional",
    "unwrap": [Function],
    "with": [Function],
  },
  "fr": ZodOptional {
    "and": [Function],
    "apply": [Function],
    "array": [Function],
    "brand": [Function],
    "catch": [Function],
    "check": [Function],
    "clone": [Function],
    "decode": [Function],
    "decodeAsync": [Function],
    "def": {
      "innerType": ZodString {
        "and": [Function],
        "apply": [Function],
        "array": [Function],
        "base64": [Function],
        "base64url": [Function],
        "brand": [Function],
        "catch": [Function],
        "check": [Function],
        "cidrv4": [Function],
        "cidrv6": [Function],
        "clone": [Function],
        "cuid": [Function],
        "cuid2": [Function],
        "date": [Function],
        "datetime": [Function],
        "decode": [Function],
        "decodeAsync": [Function],
        "def": {
          "type": "string",
        },
        "default": [Function],
        "describe": [Function],
        "duration": [Function],
        "e164": [Function],
        "email": [Function],
        "emoji": [Function],
        "encode": [Function],
        "encodeAsync": [Function],
        "endsWith": [Function],
        "exactOptional": [Function],
        "format": null,
        "guid": [Function],
        "includes": [Function],
        "ipv4": [Function],
        "ipv6": [Function],
        "isNullable": [Function],
        "isOptional": [Function],
        "jwt": [Function],
        "ksuid": [Function],
        "length": [Function],
        "lowercase": [Function],
        "max": [Function],
        "maxLength": null,
        "meta": [Function],
        "min": [Function],
        "minLength": null,
        "nanoid": [Function],
        "nonempty": [Function],
        "nonoptional": [Function],
        "normalize": [Function],
        "nullable": [Function],
        "nullish": [Function],
        "optional": [Function],
        "or": [Function],
        "overwrite": [Function],
        "parse": [Function],
        "parseAsync": [Function],
        "pipe": [Function],
        "prefault": [Function],
        "readonly": [Function],
        "refine": [Function],
        "regex": [Function],
        "register": [Function],
        "safeDecode": [Function],
        "safeDecodeAsync": [Function],
        "safeEncode": [Function],
        "safeEncodeAsync": [Function],
        "safeParse": [Function],
        "safeParseAsync": [Function],
        "slugify": [Function],
        "spa": [Function],
        "startsWith": [Function],
        "superRefine": [Function],
        "time": [Function],
        "toJSONSchema": [Function],
        "toLowerCase": [Function],
        "toUpperCase": [Function],
        "transform": [Function],
        "trim": [Function],
        "type": "string",
        "ulid": [Function],
        "uppercase": [Function],
        "url": [Function],
        "uuid": [Function],
        "uuidv4": [Function],
        "uuidv6": [Function],
        "uuidv7": [Function],
        "with": [Function],
        "xid": [Function],
      },
      "type": "optional",
    },
    "default": [Function],
    "describe": [Function],
    "encode": [Function],
    "encodeAsync": [Function],
    "exactOptional": [Function],
    "isNullable": [Function],
    "isOptional": [Function],
    "meta": [Function],
    "nonoptional": [Function],
    "nullable": [Function],
    "nullish": [Function],
    "optional": [Function],
    "or": [Function],
    "overwrite": [Function],
    "parse": [Function],
    "parseAsync": [Function],
    "pipe": [Function],
    "prefault": [Function],
    "readonly": [Function],
    "refine": [Function],
    "register": [Function],
    "safeDecode": [Function],
    "safeDecodeAsync": [Function],
    "safeEncode": [Function],
    "safeEncodeAsync": [Function],
    "safeParse": [Function],
    "safeParseAsync": [Function],
    "spa": [Function],
    "superRefine": [Function],
    "toJSONSchema": [Function],
    "transform": [Function],
    "type": "optional",
    "unwrap": [Function],
    "with": [Function],
  },
}
`;
